<resources>
    <string name="app_name">Door Eye</string>
    <string name="phone_number">Phone Number:</string>
    <string name="enter_your_code_here">Your Code</string>
    <string name="continu">continue</string>
    <string name="phone_number_verification">Phone Number Verification</string>
    <string name="missing_code">missing code!</string>
    <string name="invalid_code">invalid code!</string>
    <string name="write_verification_code">Please write your verification code</string>
    <string name="wait_verification">Please wait, while we are verifying your phone number</string>
    <string name="please_enter_code">"please enter the verification code sent to "</string>

    <string name="submit">submit</string>
    <string name="home">Home</string>
    <string name="permissions_not_granted">This app needs access to your camera and mic to make video calls</string>
    <string name="an_sms_may_be_sent_to_your_phone">An SMS may be sent to your phone.</string>
    <string name="resend">Resend</string>
    <string name="enter_verification_code">Enter Verification Code</string>
    <string name="logout">Logout</string>
    <string name="settings">Settings</string>
    <string name="event_nhistory">Event\n History</string>
    <string name="check_front_ndoor">Check Front\n Door</string>
    <string name="family_partners">Family &amp;\nPartners</string>
    <string name="contact_us">Contact\nUs</string>
    <string name="empty_fullname">Please enter your name here</string>
    <string name="empty_email">Please enter your email here</string>
    <string name="empty_boxId">Please enter your box id here</string>
    <string name="empty_message">Please enter your message here</string>
    <string name="error_email">Please enter your real email</string>
    <string name="error_fullname">Please enter your real fullname</string>
    <string name="error_boxId">There is no box with this id</string>
    <string name="members">Members</string>
    <string name="requests">Requests</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="uset_have_call">you have a call</string>
    <string name="family_partner"><![CDATA[Family & Partners]]></string>
    <string name="admin">ADMIN</string>
    <string name="edit">Edit Profile</string>
    <string name="delete">Delete</string>
    <string name="current_user">YOU</string>
    <string name="choose_photo">Choose Photo?</string>
    <string name="gallery">Gallery</string>
    <string name="camera">Camera</string>
    <string name="you_cant_modify">Sorry you can\'t modify this User.</string>
    <string name="you_cant_delete">Sorry you can\'t delete this User.</string>
    <string name="fail_upload_image">Failed uploading image, Please try again.</string>
    <string name="accept">Accept</string>
    <string name="refuse">Refuse</string>
    <string name="you_cant_refuse">Sorry you can\'t refuse this User.</string>
    <string name="you_cant_accept">Sorry you can\'t accept this User.</string>
    <string name="there_are_no_requests_yet">There are No Requests Yet.</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="message">Message</string>
    <string name="send_mail">send mail...</string>
    <string name="error_mail_sending">There is no email client installed.</string>
    <string name="rings">Rings</string>
    <string name="motions">Motions</string>
    <string name="live">Door Checks</string>
    <string name="all">All</string>
    <string name="event_history">Event History</string>
    <string name="date_format">dd-MM-yyyy HH:mm</string>
    <string name="there_are_no_lives_yet">There are No Door Checks Yet</string>
    <string name="there_are_no_rings_yet">There are No Rings Yet</string>
    <string name="there_are_no_motions_yet">There are No Motions Yet</string>
    <string name="there_are_no_events_yet">There are No Events Yet</string>
    <string name="no_responder">Missed responder</string>
    <string name="confirm">Confirm</string>
    <string name="box_id">Box Id</string>
    <string name="full_name">Full Name</string>
    <string name="register">Register</string>
    <string name="back_button">back button</string>
    <string name="contact_us_register">Contact Us</string>
    <string name="resend_code_verification">Resend Phone Number Verification Code</string>
    <string name="wait_resend_verification">Please wait, while we are resending your verification Code</string>
    <string name="seconds_remaining">" Seconds Remaining to Resend your Code"</string>
    <string name="no_internet">No Internet</string>
    <string name="check_your_internet">Check your Internet connection and try again</string>
    <string name="please_turn_on">Please turn on</string>
    <string name="wifi">Wifi</string>
    <string name="mobile_data">Mobile data</string>
    <string name="turned_on_airplane_mod">You have turned on the airplane mode.</string>
    <string name="please_turn_off">Please turn off</string>
    <string name="airplane_mode">Airplane mode</string>
    <string name="decline">Decline</string>
    <string name="waiting_for_the_admin">Waiting For The Admin To Accept Your Invitation.</string>
    <string name="bring_your_home_into_your_phone">Bring Your Home Into Your Phone.</string>
    <string name="dashboard">Dashboard</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="receive_notifications">Receive Notifications</string>
    <string name="receive_calls">Receive Calls</string>
    <string name="your_options">Your Options</string>
    <string name="channel_name" translatable="false">com.montassarselmi.dooreye.channel_name</string>
    <string name="channel_description" translatable="false">com.montassarselmi.dooreye.channel_description</string>
    <string name="default_notification_channel_id" translatable="false">com.montassarselmi.dooreye.default_notification_channel_id</string>
    <string name="default_notification_channel_name" translatable="false">com.montassarselmi.dooreye.default_notification_channel_name</string>
    <string name="change_language">Change language</string>
    <string name="subscribe_to_notification">Subscribe to Notification</string>
    <string name="subscribe">Subscribe</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="save_changes">Save Changes</string>
    <string name="open_door">Open Door</string>
    <string name="waiting_for_connection">Waiting For The Connection</string>
    <string name="door_opened">Door Opened</string>
    <string name="door_closed">Door Closed</string>
</resources>
