<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".SettingsActivity">

    <LinearLayout android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <include layout="@layout/appbar_settings" android:id="@+id/appbar"/>

        <RelativeLayout
        android:layout_width="match_parent"
        android:layout_margin="15dp"
        android:layout_height="70dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/subscribe_to_notification"
            android:layout_centerVertical="true"
            android:textStyle="bold"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"/>
        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/subscribe"
            android:textColor="@android:color/white"
           android:gravity="center_vertical"
            android:layout_centerVertical="true"
            android:layout_alignParentEnd="true"
          />
    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/colorTextSecondary"
        android:layout_marginEnd="15dp"
        android:layout_marginStart="15dp"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_margin="15dp"
        android:layout_height="70dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/change_language"
            android:layout_centerVertical="true"
            android:textStyle="bold"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"/>
        <org.angmarch.views.NiceSpinner
            android:id="@+id/nice_spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:textColor="@android:color/black"
            android:theme="@style/Theme.AppCompat.Light"
            android:layout_centerVertical="true"
            />

    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/colorTextSecondary"
        android:layout_marginEnd="15dp"
        android:layout_marginStart="15dp"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_margin="15dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/receive_calls"
            android:layout_centerVertical="true"
            android:textStyle="bold"
            android:gravity="center_vertical"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"/>

        <androidx.appcompat.widget.SwitchCompat
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:enabled="true"
            android:gravity="center"
            android:id="@+id/switch_calls"
            android:layout_centerVertical="true"
            android:layout_alignParentEnd="true"/>
    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/colorTextSecondary"
        android:layout_marginEnd="15dp"
        android:layout_marginStart="15dp"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_margin="15dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/receive_notifications"
            android:layout_centerVertical="true"
            android:textStyle="bold"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"/>

        <androidx.appcompat.widget.SwitchCompat
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:enabled="true"
            android:id="@+id/switch_notification"
            android:gravity="center"
            android:layout_alignParentEnd="true"/>
    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/colorTextSecondary"
        android:layout_marginEnd="15dp"
        android:layout_marginStart="15dp"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_margin="15dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dark_mode"
            android:layout_centerVertical="true"
            android:textStyle="bold"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"/>

        <androidx.appcompat.widget.SwitchCompat
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/switch_night_mode"
            android:gravity="center"
            android:layout_alignParentEnd="true"/>
    </RelativeLayout>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="40dp"
        android:text="@string/save_changes"
        android:textColor="@android:color/white"
        android:onClick="onSaveChangesClicked"/>
    </LinearLayout>
</ScrollView>
