<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="250dp"
    android:layout_height="131dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_gravity="center_horizontal">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:cardUseCompatPadding="true"
            app:cardCornerRadius="10dp"
            android:elevation="5dp">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:id="@+id/txt_choose_photo"
                android:text="@string/choose_photo"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textStyle="bold"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:layout_below="@id/txt_choose_photo">
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/btn_from_gallery"
                    android:text="@string/gallery"
                    android:textColor="@color/buttonsColor"
                    android:background="@color/colorPrimaryDark"

                    />
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/btn_from_camera"
                    android:text="@string/camera"
                    android:textColor="@color/buttonsColor"
                    android:background="@color/buttonsColor"
                    android:layout_marginStart="10dp"
                    />
            </LinearLayout>
            </RelativeLayout>
        </androidx.cardview.widget.CardView>
</RelativeLayout>