<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegistrationActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:id="@+id/ll_phone">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/phone_number"
                android:textColor="@android:color/black"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"/>

            <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="5dp"
            android:layout_marginStart="20dp"
            >

            <com.hbb20.CountryCodePicker
                android:layout_height="wrap_content"
                app:ccp_defaultNameCode="TN"
                android:layout_width="0dp"
                android:layout_weight="3"
                android:focusableInTouchMode="true"
                android:id="@+id/countryCodeHolder"/>
            <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:focusableInTouchMode="true"
                android:inputType="phone"
                android:id="@+id/edt_phone"
                android:hint="96 52 84 12"
                tools:ignore="TextFields"
                android:importantForAutofill="no" />
            </LinearLayout>
        </LinearLayout>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_your_code_here"
            android:id="@+id/edt_confirm_code"
            android:layout_margin="5dp"
            android:visibility="gone"
            android:inputType="number"
            android:importantForAutofill="no" />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/continu"
            android:id="@+id/btn_continue"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"/>
    </LinearLayout>
</RelativeLayout>