<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp"
        android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="5dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_bold"
            android:text="@string/dashboard"
            android:textColor="#5E5E5E"
            android:textSize="24dp" />

        <View
            android:layout_width="40dp"
            android:layout_height="6dp"
            android:layout_gravity="center"
            android:layout_marginLeft="8dp"
            android:background="@drawable/bg_view">

        </View>

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto_regular"
        android:text="@string/bring_your_home_into_your_phone"
        android:textColor="#5E5E5E"
        android:textSize="18dp" />


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="22dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/main_bottom_back"
            android:orientation="vertical"
            android:padding="16dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto_mediumitalic"
                    android:text="@string/welcome_back"
                    android:textColor="#ffff"
                    android:textSize="18dp" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:layout_width="38dp"
                        android:layout_height="38dp"
                        android:layout_alignParentRight="true"
                        android:src="@drawable/splash_logo"
                        android:id="@+id/user_image"/>



                </RelativeLayout>


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto_medium"
                    android:id="@+id/txt_user_name"
                    android:text="Android Developer"
                    android:textColor="#ffff"
                    android:textSize="24dp" />
            </LinearLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="5dp"
                    android:layout_centerVertical="true"
                    android:layout_toLeftOf="@id/switch_notification"
                    android:fontFamily="@font/roboto_medium"
                    android:text="@string/receive_notifications"
                    android:textColor="#ffff"
                    android:textSize="18dp" />

                <androidx.appcompat.widget.SwitchCompat
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:id="@+id/switch_notification"/>

            </RelativeLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toLeftOf="@id/switch_calls"
                    android:fontFamily="@font/roboto_medium"
                    android:text="@string/receive_calls"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="5dp"
                    android:textColor="#ffff"
                    android:textSize="18dp" />

                <androidx.appcompat.widget.SwitchCompat
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:id="@+id/switch_calls"/>

            </RelativeLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/your_options"
            android:textColor="#5E5E5E"
            android:textSize="18dp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_gravity="center"
            android:layout_marginLeft="8dp"
            android:background="#7a8b8b8b"/>

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:orientation="horizontal">

        <androidx.cardview.widget.CardView
            android:layout_width="160dp"
            android:layout_height="120dp"
            android:layout_weight="1"
            android:id="@+id/cv_history"
            app:cardCornerRadius="8dp"
            android:onClick="onEventHistoryClicked"
            app:cardUseCompatPadding="true"
            app:cardElevation="2dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/visible_event"
                android:padding="8dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto_bold"
                    android:text="@string/event_nhistory"
                    android:textColor="#5E5E5E"
                    android:textSize="18dp" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentBottom="true"
                    android:src="@drawable/ic_history" />

            </RelativeLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="160dp"
            android:layout_height="120dp"
            android:layout_marginLeft="18dp"
            android:layout_weight="1"
            android:onClick="onCheckFrontDoorClicked"
            android:id="@+id/cv_front_door"
            app:cardCornerRadius="8dp"
            app:cardUseCompatPadding="true"
            android:background="@android:color/transparent"
            app:cardElevation="2dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/visible_check"
                android:padding="8dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto_bold"
                    android:text="@string/check_front_ndoor"
                    android:textColor="#5E5E5E"
                    android:textSize="18dp" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentBottom="true"
                    android:src="@drawable/ic_front_door" />

            </RelativeLayout>

        </androidx.cardview.widget.CardView>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="horizontal">

        <androidx.cardview.widget.CardView
            android:layout_width="160dp"
            android:layout_height="120dp"
            android:layout_weight="1"
            android:onClick="onFamilyClicked"
            app:cardCornerRadius="8dp"
            android:id="@+id/cv_family"
            app:cardUseCompatPadding="true"
            app:cardElevation="2dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="8dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto_bold"
                    android:text="@string/family_partners"
                    android:textColor="#5E5E5E"
                    android:textSize="18dp" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentBottom="true"
                    android:src="@drawable/ic_family" />

            </RelativeLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="160dp"
            android:layout_height="120dp"
            android:layout_marginLeft="18dp"
            android:layout_weight="1"
            app:cardCornerRadius="8dp"
            android:onClick="onSettingsClicked"
            android:id="@+id/cv_settings"
            app:cardUseCompatPadding="true"
            app:cardElevation="2dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/visible_setting"
                android:padding="8dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto_bold"
                    android:text="@string/settings"
                    android:textColor="#5E5E5E"
                    android:textSize="18dp" />

                <ImageView
                    android:layout_width="47dp"
                    android:layout_height="50dp"
                    android:layout_marginTop="30dp"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentBottom="true"
                    android:src="@drawable/settings" />

            </RelativeLayout>

        </androidx.cardview.widget.CardView>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="8dp"
        android:orientation="horizontal">

        <androidx.cardview.widget.CardView
            android:layout_width="160dp"
            android:layout_height="120dp"
            android:layout_weight="1"
            app:cardCornerRadius="8dp"
            android:id="@+id/cv_contact_us"
            android:onClick="onContactUsClicked"
            app:cardUseCompatPadding="true"
            app:cardElevation="2dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="8dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto_bold"
                    android:text="@string/contact_us"
                    android:textColor="#5E5E5E"
                    android:textSize="18dp" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentBottom="true"
                    android:src="@drawable/ic_contact_us" />

            </RelativeLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="160dp"
            android:layout_height="120dp"
            android:layout_marginLeft="18dp"
            android:layout_weight="1"
            android:id="@+id/cv_logout"
            app:cardUseCompatPadding="true"
            app:cardCornerRadius="8dp"
            android:onClick="onLogoutClicked"
            app:cardElevation="2dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="8dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto_bold"
                    android:text="@string/logout"
                    android:textColor="#5E5E5E"
                    android:textSize="18dp" />

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentBottom="true"
                    android:src="@drawable/logout1" />

            </RelativeLayout>

        </androidx.cardview.widget.CardView>


    </LinearLayout>
    </LinearLayout>
    </ScrollView>

</LinearLayout>